--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         </section>
     </main>
     <footer>
-
+<h2>Influencer products</h2>
+<p class="copy">Copyright © 2023  influencer products all rights reserved</p>
+<div class="footer-icon"><i class='bx bxl-facebook-circle'></i><i class='bx bxl-instagram-alt' ></i><i class='bx bxl-twitter' ></i><i class='bx bxl-youtube' ></i></div>
     </footer>
 </body>
 </html>
